--- a/Html/main_publicar.html
+++ b/Html/main_publicar.html
@@ -3,9 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../CSS/main_publicar.css">
     <title>Document</title>
 </head>
 <body>
-    <h2>test</h2>
+    
+
+
+
+
+
+
+
+    <div class="contenedor_publicacion">
+        <figure>
+            <img src="../img_pb/imgprueba.jpg" alt="">
+        </figure>
+        <div class="botonesfun">
+            <button>Subir</button>
+        </div>
+        <div class="info">
+            <h2>info</h2>
+            <input type="text">
+        </div>
+        <div class="botones_inferiores">
+            <button>Preview</button>
+            <button>Publicar</button>
+        </div>
+    </div>
+
+    
+
+
+
+
 </body>
 </html>
