--- a/Html/main_publicar.html
+++ b/Html/main_publicar.html
@@ -20,7 +20,7 @@
             <img src="../img_pb/imgprueba.jpg" alt="">
         </figure>
         <div class="botonesfun">
-            <button>Subir</button>
+            <input type="file" id="file-input" accept="image/*">
         </div>
         <div class="info">
             <h2>info</h2>
@@ -31,6 +31,7 @@
             <button>Publicar</button>
         </div>
     </div>
+
 
     
 
