--- a/Html/generos.html
+++ b/Html/generos.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <form action="register.php">
+    <form action="../register.php">
         <div class="caja"> 
             <div class="titulito">
                 <i class="fa-solid fa-book-open"></i>
