--- a/Html/registro.html
+++ b/Html/registro.html
@@ -7,7 +7,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-<form action="act1.php">
+<form action="register.php">
 
 
 
@@ -19,7 +19,11 @@
             <i class="fa-solid fa-book-open"></i>
             <h2 class="anix">Registrate a iBooks</h2>
             </div>
-
+            
+            <div class="in">
+                <input type="email" placeholder="correo" required>
+                <i class="fa fa-envelope"></i> 
+            </div>
            
             <div class="in">
                 <input type="text" placeholder="Usuario" required name="user">
@@ -31,9 +35,8 @@
                 <i class="fa fa-lock"></i>
             </div>
 
-            <button class="ani" type="submit" >Iniciar Sesión</button>
 
-            <a href="registro.html" class="boton">Registrarse</a>
+            <a href="generos.html" type="submit" class="boton">Registrarse</a>
         </div>
 
         <div class="imagenbook">
