--- a/Html/main_publicar.html
+++ b/Html/main_publicar.html
@@ -20,7 +20,10 @@
             <img src="../img_pb/imgprueba.jpg" alt="">
         </figure>
         <div class="botonesfun">
-            <input type="file" id="file-input" accept="image/*">
+            <button>
+                <input type="file" id="fileInput" style="display: none;">
+                <label for="fileInput">Seleccionar imagen</label>
+            </button>
         </div>
         <div class="info">
             <h2>info</h2>
