--- a/Html/main_web.html
+++ b/Html/main_web.html
@@ -19,7 +19,7 @@
         <a href="usuariooficial.html" class="opcion-menu"><i class="fa-solid fa-house"></i> Registrarse</a>
         <a href="perfil.html" class="opcion-menu"><i class="fa-solid fa-user"></i> Perfil</a>
         <a href="acercaDeNosotros.html" class="opcion-menu"><i class="fa-solid fa-book"></i> Acerca de nosotros</a>
-        <a href="publicar.html" class="opcion-menu"><i class="fa-solid fa-paper-plane"></i> Publicar</a>
+        <a href="main_publicar.html" class="opcion-menu"><i class="fa-solid fa-paper-plane"></i> Publicar</a>
     </aside>
 
     <main class="seccion-publicaciones">
