--- a/Html/main_web.html
+++ b/Html/main_web.html
@@ -27,6 +27,7 @@
     </style>
 </header>
 
+
 <div class="contenedor-principal">
 
     <aside class="menu-lateral">
@@ -37,6 +38,68 @@
     </aside>
 
     <main class="seccion-publicaciones">
+        
+        <!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <title>Mi Slider</title>
+    <link rel="stylesheet" href="estilos.css">
+</head>
+<body>
+
+    <div class="slider">
+        <div class="slides">
+            <img src="../imagenes/libro1.jpg" alt="Libro 1">
+            <img src="../imagenes/libro2.jpg" alt="Libro 2">
+            <img src="../imagenes/libro3.jpg" alt="Libro 3">
+            <img src="../imagenes/libro4.jpg" alt="Libro 4">
+
+            <img src="../imagenes/libro1.jpg" alt="Libro 1">
+            <img src="../imagenes/libro2.jpg" alt="Libro 2">
+            <img src="../imagenes/libro3.jpg" alt="Libro 3">
+            <img src="../imagenes/libro4.jpg" alt="Libro 4">
+            
+            <style>
+                * {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+
+.slider {
+    width: 100%;
+    height: 400px;
+    overflow: hidden;
+}
+
+
+.slides {
+    display: flex;
+    width: 200%;
+    animation: mover 12s linear infinite;
+}
+
+.slides img {
+    width: 100%;
+    height: 200px;
+}
+
+@keyframes mover {
+    from {
+        transform: translateX(0);
+    }
+    to {
+        transform: translateX(-50%);
+    }
+}
+            </style>
+        </div>
+    </div>
+
+</body>
+</html>
 
 
 
