Correccion de errores #5
Correcion del error niveles label que hacía que todo tuviera el mismo formato en css

--- a/Html/generos.html
+++ b/Html/generos.html
@@ -24,7 +24,7 @@
                 <div class="nivel-item">
                     
                     <input type="checkbox" name="nivel" id="basico" class="toggle">
-                    <label for="basico" class="nivel"><i class="fa-solid fa-pencil"></i> Educación básico</label>
+                    <label for="basico" class="nivel"><i class="fa-solid fa-pencil"></i>Educación básico</label>
 
                     <div class="contenido">
                         <label class="tema"><input type="checkbox">Lectura y Escritura</label>
@@ -52,7 +52,7 @@
                 <!-- bachillerato -->
                 <div class="nivel-item">
                     <input type="checkbox" id="bachillerato" class="toggle">
-                    <label for="bachillerato" class="nivel"><i class="fa-solid fa-graduation-cap"></i>Bachillerato</label>
+                    <label for="bachillerato" class="nivel"><i class="fa-solid fa-graduation-cap" id="inelvin"></i>Bachillerato</label>
 
                     <div class="contenido">
                         <label class="tema"><input type="checkbox">Análisis Literario</label>
@@ -79,10 +79,10 @@
                     </div>
                 </div>
                 
-                <!-- unniversidad -->
+                <!-- universidad -->
                 <div class="nivel-item">
                     <input type="checkbox" id="universidad" class="toggle">
-                    <label for="universidad" class="nivel"><i class="fa-solid fa-university"></i>Uiversidad</label>
+                    <label for="universidad" class="nivel"><i class="fa-solid fa-university"></i>Universidad</label>
 
                     <div class="contenido">
                         <label class="tema"><input type="checkbox">Ingeniería y Tecnología</label>
