Cambios en los botones #3

--- a/Html/registro.html
+++ b/Html/registro.html
@@ -35,8 +35,7 @@
                 <i class="fa fa-lock"></i>
             </div>
 
-
-            <a href="generos.html" type="submit" class="boton">Registrarse</a>
+            <button type="button" class="register" onclick="window.location.href='generos.html'">Registrarse</button>
         </div>
 
         <div class="imagenbook">
