--- a/Html/usuariooficial.html
+++ b/Html/usuariooficial.html
@@ -33,7 +33,7 @@
 
             <button class="ani" type="submit" >Iniciar Sesión</button>
 
-            <a href="registro.html" class="boton">Registrarse</a>
+            <button type="button" class="register" onclick="window.location.href='registro.html'">Registrarse</button>
         </div>
 
         <div class="imagenbook">
